--- a/public/css/style.css
+++ b/public/css/style.css
@@ -118,13 +118,39 @@ div.column {
 }
 
 div.columnloading {
-    height: 30px;
-    width: 30px;
-    float: right;
-    background: #eeeeee
-                url('../../img/loading-small.gif')
-                100% 100%
-                no-repeat;
+  height: 30px;
+  width: 30px;
+  float: right;
+  background: #eeeeee
+              url('../../img/loading-small.gif')
+              100% 100%
+              no-repeat;
+}
+
+div.colleft {
+  padding-top: 5px;
+  height: 30px;
+  width: 30px;
+  float: left;
+}
+
+div.colleft a {
+  text-decoration: none;
+  font-size: 1.5em;
+  color: gray;
+}
+
+div.colright {
+  padding-top: 5px;
+  height: 30px;
+  width: 30px;
+  float: right;
+}
+
+div.colright a {
+  text-decoration: none;
+  font-size: 1.5em;
+  color: gray;
 }
 
 h4.columnheading {
