--- a/public/css/themes/METAL.css
+++ b/public/css/themes/METAL.css
@@ -63,6 +63,19 @@ span#posttoaccountsbutton a {
   text-decoration: none;
 }
 
+.gpopover {
+  background: #404040;
+  color: white;
+}
+
+.gpopover .gpopover-arrow {
+  border-bottom-color: #404040;
+}
+
+.gpopover .gpopover-arrow-shadow {
+    border-bottom-color: #404040;
+}
+
 div.columnloading {
   background: #303030
                 url('../../img/loading-small.gif')
