--- a/public/css/themes/minimal.css
+++ b/public/css/themes/minimal.css
@@ -55,6 +55,19 @@ span.charcount {
   font-weight: bold;
 }
 
+.gpopover {
+  background: #cccccc;
+  color: black;
+}
+
+.gpopover .gpopover-arrow {
+  border-bottom-color: #cccccc;
+}
+
+.gpopover .gpopover-arrow-shadow {
+    border-bottom-color: #cccccc;
+}
+
 div.columnloading {
   background: #ffffff
                 url('../../img/loading-small.gif')
@@ -135,29 +148,15 @@ span.replycharcount {
 }
 
 .button {
-	-moz-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
-	box-shadow:inset 0px 1px 0px 0px #bbdaf7;
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #79bbff), color-stop(1, #378de5) ) !important;
-	background:-moz-linear-gradient( center top, #79bbff 5%, #378de5 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#79bbff', endColorstr='#378de5') !important;
 	background-color:#79bbff !important;
 	border:1px solid #84bbf3;
 	color:#ffffff !important;
-	text-shadow:1px 1px 0px #528ecc;
 }
 
 .deletebutton {
-	-moz-box-shadow:inset 0px 1px 0px 0px #f5978e;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #f5978e;
-	box-shadow:inset 0px 1px 0px 0px #f5978e;
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #f24537), color-stop(1, #c62d1f) ) !important;
-	background:-moz-linear-gradient( center top, #f24537 5%, #c62d1f 100% );
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f24537', endColorstr='#c62d1f') !important;
 	background-color:#f24537 !important;
 	border:1px solid #d02718;
 	color:#ffffff !important;
-	text-shadow:1px 1px 0px #810e05;
 }
 
 div#errorbox {
