--- a/public/css/themes/default.css
+++ b/public/css/themes/default.css
@@ -22,6 +22,7 @@ div#topmenu a {
 
 textarea#postentry {
   background-color: #bbdaf7;
+  color: black;
   border: 2px solid #378de5;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
