--- a/public/css/style-login.css
+++ b/public/css/style-login.css
@@ -135,6 +135,7 @@ form#login div.content input.textbox {
   width: 12em;
   padding: 0.4em 0.3em 0.1em 0.3em;
   background-color: #bbdaf7;
+  color: black;
   border: 2px solid #378de5;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
