Reflow settings page properly in mobile view, improve column heading CSS in non-default themes

--- a/public/css/themes/default.css
+++ b/public/css/themes/default.css
@@ -80,6 +80,18 @@ h4.columnheading {
   color: black;
 }
 
+div.columnloading {
+  color: black;
+}
+
+div.colleft a {
+  color: black;
+}
+
+div.colright a {
+  color: black;
+}
+
 div.item {
   background-color: white;
   border: 1px solid #cccccc;
