--- a/public/css/themes/literary.css
+++ b/public/css/themes/literary.css
@@ -66,6 +66,18 @@ h4.columnheading {
   text-align: center;
 }
 
+div.columnloading {
+  color: gray;
+}
+
+div.colleft a {
+  color: gray;
+}
+
+div.colright a {
+  color: gray;
+}
+
 div.item {
   background-color: white;
   padding-bottom: 2em;
