--- a/public/css/themes/metro.css
+++ b/public/css/themes/metro.css
@@ -71,6 +71,18 @@ h4.columnheading {
   color: white;
 }
 
+div.columnloading {
+  color: white;
+}
+
+div.colleft a {
+  color: white;
+}
+
+div.colright a {
+  color: white;
+}
+
 div.item {
   background-color: white;
   color: black;
