--- a/public/css/themes/literary.css
+++ b/public/css/themes/literary.css
@@ -59,6 +59,11 @@ span.charcount {
     border-bottom-color: #cccccc;
 }
 
+div.columnheading {
+  background-color: white;
+}
+
+
 h4.columnheading {
   color: black;
   font-style: italic;
