--- a/public/css/themes/inverted.css
+++ b/public/css/themes/inverted.css
@@ -76,6 +76,11 @@ span#posttoaccountsbutton a {
     border-bottom-color: #404040;
 }
 
+div.columnheading {
+  background-color: #303030;
+}
+
+
 h4.columnheading {
   color: white;
 }
