--- a/public/css/style.css
+++ b/public/css/style.css
@@ -358,7 +358,7 @@ a.loading img.spinner {
     height: 100%;
     width: 100%;
     background: rgba( 235, 235, 235, 1 )
-                url('../../img/loading.gif')
+                url('/img/loading.gif')
                 50% 50%
                 no-repeat;
     text-align: center;
